# anylabeling

./: pyproject.toml
anylabeling/services/auto_labeling/: sam_onnx.py
